k8s/uat/service.yml
apiVersion: v1
kind: Service

metadata:
  name: web-app-service
  namespace: uat

spec:
  selector:
    app: web-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

  type: LoadBalancer
