k8s/uat/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: web-app-ingress
  namespace: uat

spec:
  ingressClassName: nginx

  rules:
  - host: uat.webapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-service
            port:
              number: 80
